--- a/DynamicDataEFTestApp/DynamicDataEFTestApp.csproj
+++ b/DynamicDataEFTestApp/DynamicDataEFTestApp.csproj
@@ -38,6 +38,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DynamicData.EFCodeFirstProvider">
+      <HintPath>..\packages\DynamicData.EFCodeFirstProvider.0.5.0.0\lib\net40\DynamicData.EFCodeFirstProvider.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
